--- a/prometheus-data/prometheus.yml
+++ b/prometheus-data/prometheus.yml
@@ -22,10 +22,9 @@ scrape_configs:
     metrics_path: /probe
     params:
       module: [http_2xx]
-    static_configs:
-      - targets: 
-        - http://www.marquesconsult.com.br
-        - http://192.168.240.3:3001
+    file_sd_configs:
+      - files:
+        - targets.yml
     relabel_configs:
       - source_labels: [__address__]
         target_label: __param_target
