--- a/prometheus-data/targets.yml
+++ b/prometheus-data/targets.yml
@@ -1,3 +1,9 @@
+# Endpoints a serem monitorados
+
 - targets: 
   - http://www.marquesconsult.com.br
+  - https://www.marquesconsult.com.br
+  - http://www.marquesconsult.com.br0997
   - http://192.168.240.3:3001
+  - http://192.168.240.3:3030
+  - https://github.com
