--- a/nginx-proxy/conf.d/blackbox.conf
+++ b/nginx-proxy/conf.d/blackbox.conf
@@ -6,8 +6,6 @@ server {
     server_name blackbox.example.com;
 
     location / {
-
-        proxy_pass http://192.168.240.6:9115/;
-        
+        proxy_pass http://192.168.240.6:9115;
     }
 }
