--- a/prometheus-data/prometheus.yml
+++ b/prometheus-data/prometheus.yml
@@ -3,7 +3,7 @@ scrape_configs:
     scrape_interval: 10s
     static_configs:
       - targets: 
-        - 192.168.240.4:9090
+        - localhost:9090
 
   - job_name: "blackbox"
     metrics_path: /probe
@@ -18,4 +18,4 @@ scrape_configs:
       - source_labels: [__param_target]
         target_label: instance
       - target_label: __address__
-        replacement: 192.168.240.6:9115
+        replacement: blackbox:9115
