--- a/nginx-proxy/conf.d/app.conf
+++ b/nginx-proxy/conf.d/app.conf
@@ -6,6 +6,6 @@ server {
     server_name app.example.com;
 
     location / {
-        proxy_pass http://192.168.240.3:3001;
+        proxy_pass http://app:3001/;
     }
 }
