--- a/nginx-proxy/conf.d/grafana.conf
+++ b/nginx-proxy/conf.d/grafana.conf
@@ -6,6 +6,6 @@ server {
     server_name grafana.example.com;
 
     location / {
-        proxy_pass http://192.168.240.5:3000;
+        proxy_pass http://grafana:3000/;
     }
 }
